# heru

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.litehive/: .gitignore  config.yaml  context.md  state.yaml
heru/: __init__.py  _continuation.py  _engine_detection.py  _sandbox.py  base.py  engine_detection.py  main.py  models.py  types.py
heru/adapters/: __init__.py  _claude_impl.py  _codex_impl.py  _copilot_impl.py  _gemini_impl.py  _goz_impl.py  _opencode_impl.py  claude.py  codex.py  common.py  copilot.py  gemini.py  goz.py  opencode.py
heru/quota/: __init__.py  _shared.py  claude_quota.py  codex_quota.py  copilot_quota.py  zai_quota.py
scripts/: install-hooks.sh  pre-commit.sh
tests/: conftest.py  test_api_contract_docs.py  test_base_direct.py  test_claude_adapter_direct.py  test_cli_smoke.py  test_codex_adapter_direct.py  test_codex_quota.py  test_copilot_adapter_direct.py  test_engine_timeline.py  test_gemini_adapter_direct.py  test_goz_adapter.py  test_goz_adapter_direct.py  test_heru_cli.py  test_inactivity_timeout.py  test_opencode_adapter_direct.py  test_parse_warnings.py  test_pre_commit_hook.py  test_quota_parsers.py  test_resume_adapters.py  test_unified_events.py
tests/contract/: conftest.py  test_adapter_contract.py  test_base_contract.py  test_entrypoints_contract.py  test_types_contract.py
tests/fixtures/: claude_stream.jsonl  codex_large_item_completed.jsonl  codex_stream.jsonl  (+4 more)
tests_integration/: README.md  conftest.py  helpers.py  test_claude.py  test_codex.py  test_copilot.py  test_gemini.py  test_goz.py  test_opencode.py
(+217 files in other folders)
