[project]
name = "heru"
version = "0.1.0"
description = "Engine adapter layer for CLI-based coding agents (codex, claude, copilot, gemini, opencode, goz). Extracted from litehive."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Alexey Grigorev"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heru"]
