[project]
name = "heru"
version = "1.0.0"
description = "Unified headless CLI for coding agents (codex, claude, copilot, gemini, opencode, goz). One interface, one JSONL output format, one resume mechanism."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Alexey Grigorev"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.11.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[project.scripts]
heru = "heru.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heru"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: opt-in real engine CLI smoke tests",
]
